Fix z-index

--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -36,7 +36,7 @@
         height: 100%;
         background: rgb(33 36 40 / 80%);
         position: absolute;
-        z-index: 11;
+        z-index: 1;
     }
 }
 
